# rem-odo

./: README.md  docker-compose.yml
backend/: .env  error_log.txt  pyproject.toml
backend/app/: deps.py  main.py  models.py  schemas.py  seed.py  store.py
backend/app/core/: config.py  database.py  security.py
backend/app/routers/: __init__.py  analytics.py  approvals.py  audit.py  auth.py  expenses.py  users.py  workflow.py
backend/app/services/: __init__.py  currency.py  duplicate_check.py  email.py  file_storage.py  ocr.py  workflow.py  workflow_engine.py
backend/tests/: test_workflow_rule_selection.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/layout/: app-shell.jsx  protected-route.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  checkbox.jsx  input.jsx  modal.jsx  select.jsx  switch.jsx  tabs.jsx  textarea.jsx  timeline-panel.jsx
frontend/src/context/: auth-context.jsx  toast-context.jsx
frontend/src/lib/: api.js
frontend/src/pages/: admin-expenses-page.jsx  admin-page.jsx  admin-rules-page.jsx  analytics-page.jsx  audit-page.jsx  auth-page.jsx  employee-page.jsx  manager-page.jsx  settings-page.jsx
